examples/compiler_errors/primop_clock_now_missing_time.flx
fn main() -> Unit {
    let ignored = clock_now()
}
